compiler/tests/success/x86-64/test_global_string_literal.jazz
u8[10] test = "Teststring";

export fn main() -> reg u8
{
    reg u8 res tmp;
    res = 0x54;

    tmp = test[0];
    res = res ^ tmp;

    return res;
}
