compiler/tests/fail/stack_allocation/x86-64/reg_var_expected.jazz
export fn main () -> reg u64 {
  stack u64 s;
  reg u64 res;

  s = 0;
  res = [s];

  return res;
}
